--- a/Labs/Lab2/resume.html
+++ b/Labs/Lab2/resume.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Resume</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Alexandre Ringuette</h1>
+        <div>Second year student in Computer Science at University of Ottawa</div>
+        <div class="information"> 
+            Phone:
+            (613) 668-3756 <br>
+            Email:
+            AlexRingMe@gmail.com <br>
+            Github:
+            https://github.com/Kirloxious <br>
+        </div>
+    </div>
+    <div>
+        <h2>Education</h2>
+        <div>
+            <div> <b>BHs: Computer Science</b> - <i>University of Ottawa</i> <br></div>
+            <div>September 2021 - PRESENT<br></div>
+            <div> Computer Science Courses Taken: <br></div>
+            <ul>
+                <li>Introduction to Computer Science</li>
+                <li>Computer Architecture</li>
+                <li>Introduction to Software Engineering</li>
+                <li>Data Structures & Algorithms</li>
+                <li>Introduction to Databases</li>
+                
+                <li>Programing Paradigms</li>
+                <li>Advanced Programming Concepts in C++</li>
+                <li>Concepts of Programming Languages</li>
+                <li>Conception and Analysis of Algorithms</li>
+            </ul>
+        </div>
+    <div>
+        <h2>Projects</h2>
+        <div class="project">
+            <li class="projectName"><b>Mealer Application</b> - <i>Mobile app</i></li>
+            <div class="description"> Lead a team to design and develop a mobile application 
+                similar to Uber Eats or DoorDash using Android Studio 
+                and Java with Firebase as the database. 
+                Developed great team work skills and communication skills. </div>
+            <li class="projectName"><b>Hotel Booking System</b> - <i>Web application</i></li>
+            <div class="description"> Collaborated in a team of 2 to create a hotel booking system 
+                using Java Servlets API and Apache server with a mySQL database</div>
+            <li class="projectName"> Ray Tracer </li>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
+<!-- <3 leave it -->
+
