--- a/wordle/public/test.html
+++ b/wordle/public/test.html
@@ -1,36 +1,61 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordle</title>
-    <script type="text/javascript" src="assets/wordle_engine.js" ></script>
-    <script type="text/javascript" src="assets/wordle_game.js" ></script>
-    <link rel="stylesheet" href="assets/style.css">
-
-</head>
-<body>
-    <div class="board" id="board">
-        <div class="row" id="row1">
-            <div class="letter-box" id="box1">1</div>
-            <div class="letter-box" id="box2">2</div>
-            <div class="letter-box" id="box3">3</div>
-            <div class="letter-box" id="box4">4</div>
-            <div class="letter-box" id="box5">5</div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Wordle</title>
+        <script type="text/javascript" src="assets/wordle_engine.js"></script>
+        <script type="text/javascript" src="assets/wordle_game.js"></script>
+        <link rel="stylesheet" href="assets/style.css" />
+    </head>
+    <body>
+        <div class="board" id="board">
+            <div class="row" id="row1">
+                <div class="letter-box" id="box1">1</div>
+                <div class="letter-box" id="box2">2</div>
+                <div class="letter-box" id="box3">3</div>
+                <div class="letter-box" id="box4">4</div>
+                <div class="letter-box" id="box5">5</div>
+            </div>
+            <div class="row" id="row2">
+                <div class="letter-box" id="box1">1</div>
+                <div class="letter-box" id="box2">2</div>
+                <div class="letter-box" id="box3">3</div>
+                <div class="letter-box" id="box4">4</div>
+                <div class="letter-box" id="box5">5</div>
+            </div>
+            <div class="row" id="row3">
+                <div class="letter-box" id="box1">1</div>
+                <div class="letter-box" id="box2">2</div>
+                <div class="letter-box" id="box3">3</div>
+                <div class="letter-box" id="box4">4</div>
+                <div class="letter-box" id="box5">5</div>
+            </div>
+            <div class="row" id="row4">
+                <div class="letter-box" id="box1">1</div>
+                <div class="letter-box" id="box2">2</div>
+                <div class="letter-box" id="box3">3</div>
+                <div class="letter-box" id="box4">4</div>
+                <div class="letter-box" id="box5">5</div>
+            </div>
+            <div class="row" id="row5">
+                <div class="letter-box" id="box1">1</div>
+                <div class="letter-box" id="box2">2</div>
+                <div class="letter-box" id="box3">3</div>
+                <div class="letter-box" id="box4">4</div>
+                <div class="letter-box" id="box5">5</div>
+            </div>
+            <div class="row" id="row6">
+                <div class="letter-box" id="box1">1</div>
+                <div class="letter-box" id="box2">2</div>
+                <div class="letter-box" id="box3">3</div>
+                <div class="letter-box" id="box4">4</div>
+                <div class="letter-box" id="box5">5</div>
+            </div>
         </div>
-        <div class="row" id="row2">
-            <div class="letter-box"></div>
-            <div class="letter-box"></div>
-            <div class="letter-box"></div>
-            <div class="letter-box"></div>
-            <div class="letter-box"></div>
+
+        <div class="input-container">
+            <input id="inputBox" type="text" maxlength="5" autofocus />
         </div>
-
-    </div>
-
-    <div class="input-container">
-        <input id="inputBox" type="text" maxlength="5" autofocus onkeydown="getInputArray(this)">
-    </div>
-
-</body>
+    </body>
 </html>
