--- a/wordle/public/test.html
+++ b/wordle/public/test.html
@@ -9,53 +9,91 @@
         <link rel="stylesheet" href="assets/style.css" />
     </head>
     <body>
+        <div class="header">
+            <span>Wordle</span>
+        </div>
         <div class="board" id="board">
             <div class="row" id="row1">
-                <div class="letter-box" id="box1">1</div>
-                <div class="letter-box" id="box2">2</div>
-                <div class="letter-box" id="box3">3</div>
-                <div class="letter-box" id="box4">4</div>
-                <div class="letter-box" id="box5">5</div>
+                <div class="letter-box" id="box1"></div>
+                <div class="letter-box" id="box2"></div>
+                <div class="letter-box" id="box3"></div>
+                <div class="letter-box" id="box4"></div>
+                <div class="letter-box" id="box5"></div>
             </div>
             <div class="row" id="row2">
-                <div class="letter-box" id="box1">1</div>
-                <div class="letter-box" id="box2">2</div>
-                <div class="letter-box" id="box3">3</div>
-                <div class="letter-box" id="box4">4</div>
-                <div class="letter-box" id="box5">5</div>
+                <div class="letter-box" id="box1"></div>
+                <div class="letter-box" id="box2"></div>
+                <div class="letter-box" id="box3"></div>
+                <div class="letter-box" id="box4"></div>
+                <div class="letter-box" id="box5"></div>
             </div>
             <div class="row" id="row3">
-                <div class="letter-box" id="box1">1</div>
-                <div class="letter-box" id="box2">2</div>
-                <div class="letter-box" id="box3">3</div>
-                <div class="letter-box" id="box4">4</div>
-                <div class="letter-box" id="box5">5</div>
+                <div class="letter-box" id="box1"></div>
+                <div class="letter-box" id="box2"></div>
+                <div class="letter-box" id="box3"></div>
+                <div class="letter-box" id="box4"></div>
+                <div class="letter-box" id="box5"></div>
             </div>
             <div class="row" id="row4">
-                <div class="letter-box" id="box1">1</div>
-                <div class="letter-box" id="box2">2</div>
-                <div class="letter-box" id="box3">3</div>
-                <div class="letter-box" id="box4">4</div>
-                <div class="letter-box" id="box5">5</div>
+                <div class="letter-box" id="box1"></div>
+                <div class="letter-box" id="box2"></div>
+                <div class="letter-box" id="box3"></div>
+                <div class="letter-box" id="box4"></div>
+                <div class="letter-box" id="box5"></div>
             </div>
             <div class="row" id="row5">
-                <div class="letter-box" id="box1">1</div>
-                <div class="letter-box" id="box2">2</div>
-                <div class="letter-box" id="box3">3</div>
-                <div class="letter-box" id="box4">4</div>
-                <div class="letter-box" id="box5">5</div>
+                <div class="letter-box" id="box1"></div>
+                <div class="letter-box" id="box2"></div>
+                <div class="letter-box" id="box3"></div>
+                <div class="letter-box" id="box4"></div>
+                <div class="letter-box" id="box5"></div>
             </div>
             <div class="row" id="row6">
-                <div class="letter-box" id="box1">1</div>
-                <div class="letter-box" id="box2">2</div>
-                <div class="letter-box" id="box3">3</div>
-                <div class="letter-box" id="box4">4</div>
-                <div class="letter-box" id="box5">5</div>
+                <div class="letter-box" id="box1"></div>
+                <div class="letter-box" id="box2"></div>
+                <div class="letter-box" id="box3"></div>
+                <div class="letter-box" id="box4"></div>
+                <div class="letter-box" id="box5"></div>
             </div>
         </div>
-
         <div class="input-container">
             <input id="inputBox" type="text" maxlength="5" autofocus />
+        </div>
+        <div id="keyboard-cont">
+            <div class="first-row">
+                <button class="keyboard-button">q</button>
+                <button class="keyboard-button">w</button>
+                <button class="keyboard-button">e</button>
+                <button class="keyboard-button">r</button>
+                <button class="keyboard-button">t</button>
+                <button class="keyboard-button">y</button>
+                <button class="keyboard-button">u</button>
+                <button class="keyboard-button">i</button>
+                <button class="keyboard-button">o</button>
+                <button class="keyboard-button">p</button>
+            </div>
+            <div class="second-row">
+                <button class="keyboard-button">a</button>
+                <button class="keyboard-button">s</button>
+                <button class="keyboard-button">d</button>
+                <button class="keyboard-button">f</button>
+                <button class="keyboard-button">g</button>
+                <button class="keyboard-button">h</button>
+                <button class="keyboard-button">j</button>
+                <button class="keyboard-button">k</button>
+                <button class="keyboard-button">l</button>
+            </div>
+            <div class="third-row">
+                <button class="keyboard-button large-key">Enter</button>
+                <button class="keyboard-button">z</button>
+                <button class="keyboard-button">x</button>
+                <button class="keyboard-button">c</button>
+                <button class="keyboard-button">v</button>
+                <button class="keyboard-button">b</button>
+                <button class="keyboard-button">n</button>
+                <button class="keyboard-button">m</button>
+                <button class="keyboard-button large-key">Del</button>
+            </div>
         </div>
     </body>
 </html>
