Added complete word list, win or lose popup, restart button and integrated into portfolio

--- a/portfolio/public/projects.html
+++ b/portfolio/public/projects.html
@@ -15,8 +15,39 @@
     </div>
 
     <div class="main">
-    
         <h1>Projects</h1>
+        <div class="project">
+            <div class="project1">
+                <h1><span>Wordle<br></span></h1>
+                <div class="images">
+                    <img src="../wordle_image.png">
+                    <img src="../wordle_image_gameInProgress.png">
+
+                </div>
+                <div class="pdescription">
+                    <h3><span class="p-subtitle">Description<br></span></h3>
+                    <span class="text">Wordle clone based on the NYtimes wordle game<br></span>
+                    <h3><span class="p-subtitle">How to play:<br></span></h3>
+                    <span class="text">
+                        The player has 6 guess to guess a random 5 letter word selected from a pool of words.<br>
+                        After each guess the letters will change colors to either green, yellow or gray.<br> 
+                        Green means the letter is in the correct position in the word.<br>
+                        Yellow means the letter exists in the word but not in the correct position. <br>
+                        Gray means the letter is not in the word.<br>
+                        The player wins if the word is guessed and loses if the word is not guessed after 6 tries. <br>
+                    </span>
+
+                </div>
+                <div class="technologie">
+                    <h3><span class="p-subtitle">Technologies</span></h3>
+                    <ul class="text">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
