--- a/wordle/public/test.html
+++ b/wordle/public/test.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Wordle</title>
         <script type="text/javascript" src="assets/wordle_engine.js"></script>
-        <script type="text/javascript" src="assets/wordle_game.js"></script>
         <link rel="stylesheet" href="assets/style.css" />
     </head>
     <body>
@@ -56,8 +55,12 @@
                 <div class="letter-box" id="box5"></div>
             </div>
         </div>
-        <div class="input-container">
+        <div class="input-container popup">
             <input id="inputBox" type="text" maxlength="5" autofocus />
+            <span class="popuptext" id="myPopup">
+
+                <button class="popupbutton" type="reset">Again?</button>
+            </span>
         </div>
         <div id="keyboard-cont">
             <div class="first-row">
