updated wordle project on portfolio page

--- a/portfolio/public/projects.html
+++ b/portfolio/public/projects.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="pdescription">
                     <h3><span class="p-subtitle">Description<br></span></h3>
-                    <span class="text">Wordle clone based on the NYtimes wordle game<br></span>
+                    <span class="text">Wordle clone based on the NYtimes wordle game with a PHP server and API<br></span>
                     <h3><span class="p-subtitle">How to play:<br></span></h3>
                     <span class="text">
                         The player has 6 guess to guess a random 5 letter word selected from a pool of words.<br>
@@ -35,6 +35,8 @@
                         Yellow means the letter exists in the word but not in the correct position. <br>
                         Gray means the letter is not in the word.<br>
                         The player wins if the word is guessed and loses if the word is not guessed after 6 tries. <br>
+                        The game will keep track of your current correct word guess streak. <br>
+                        Once a word is not guessed, the score is saved as the best streak.
                     </span>
 
                 </div>
@@ -44,6 +46,7 @@
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>Javascript</li>
+                        <li>PHP</li>
                     </ul>
                 </div>
             </div>
