added project to portfolio

--- a/portfolio/public/projects.html
+++ b/portfolio/public/projects.html
@@ -51,6 +51,36 @@
                 </div>
             </div>
         </div>
+        <div class="project">
+            <div class="project1">
+                <h1><span>Emergency Waitlist<br></span></h1>
+                <div class="images" >
+                    <img src="../login.png">
+                </div>
+                <div class="pdescription">
+                    <h3><span class="p-subtitle">Description<br></span></h3>
+                    <span class="text">Web app to simulate a hospital waiting room.<br></span>
+                    <h3><span class="p-subtitle">How it work:<br></span></h3>
+                    <span class="text">
+                        A patient can enter the waiting room by entering their name and the injury severity<br>
+                        They will see the approximate waiting time which is the sum of all the time of people before them.<br>
+                        An admin can login to view table with all the patients.<br>
+                        The application stores patient data in a Posgres database.
+                    </span>
+                </div>
+                <div class="technologie">
+                    <h3><span class="p-subtitle">Technologies</span></h3>
+                    <ul class="text">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>PHP</li>
+                        <li>Postgres</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
